make file manager not wrap items to prevent issues on low-res displays

--- a/app/static/css-tree.css
+++ b/app/static/css-tree.css
@@ -42,6 +42,7 @@
  padding: 0;
  list-style: none;
  margin-left:0px;
+ white-space: nowrap;
  }
 
  .css-treeview input
